# api/swagger/swagger.yaml
@@ -179,17 +179,13 @@ paths:
           required: false
           description: Tags
         - in: formData
-          name: attachment1
-          type: file
+          name: attachments
+          description: Array of attachment_ids
+          type: array
+          items:
+            type: string
           required: false
-        - in: formData
-          name: attachment2
-          type: file
-          required: false
-        - in: formData
-          name: attachment3
-          type: file
-          required: false
+          
       responses:
         "200":
           description: Success
@@ -303,6 +299,8 @@ paths:
     post:
       consumes:
         - multipart/form-data
+      security:
+        - Bearer: []
       tags:
       - Attachments
       summary: API for creating an attachment
@@ -327,7 +325,9 @@ paths:
         required: true
     get:
       tags:
-      - Attachments
+        - Attachments
+      security:
+        - Bearer: []
       summary: API for fetching a single attachment
       operationId: showAttachment
       responses:
@@ -346,6 +346,8 @@ paths:
     delete:
       tags:
         - Attachments
+      security:
+        - Bearer: []
       summary: For marking an attachment as deleted
       operationId: removeAttachment
       responses:
@@ -364,6 +366,8 @@ paths:
     put:
       tags:
         - Attachments
+      security:
+        - Bearer: []
       summary: For updating an attachment.
       operationId: updateAttachment
       parameters:
@@ -570,13 +574,13 @@ definitions:
     properties:
       _id: 
         type: string
-      user_id:
-        type: string
       name:
         type: string
       status:
         type: string
       s3_url:
+        type: string
+      user:
         type: string
       created_at:
         type: string
